# proteogram

./: .gitignore  LICENSE  README.md  pyproject.toml
proteogram/: image_similarity.py  proteogram.py  utils.py  visualize.py
scripts/: config.example.yml  create_proteograms.py  evaluate_methods.py  find_structures_in_scope.py  get_structures_scope20840_list.py  make_training_and_eval_data.py  make_training_data.py  make_training_data_exclude_eval.py  measure_similarity.py  measure_similarity_single_domain.py  train_model.py
